# OpenARK

./: .gitignore  .gitmodules  3DReconDemo.cpp  3DReconOffline.cpp  Avatar.cpp  AvatarDemo.cpp  AzureKinectCamera.cpp  CMakeLists.txt  Calibration.cpp  Calibration.h  Converter.cpp  Converter.h  D435Camera.cpp  D435iCalibWriter.cpp  D435iCamera.cpp  DEPENDENCIES.md  DataRecording.cpp  DepthCamera.cpp  DepthCamera.h  DoxygenConfig  F3_accuracy  FocusImageUtil.cpp  FrameObject.cpp  FrameObject.h  FramePlane.cpp  FramePlane.h  Hand.cpp  Hand.h  HandClassifier.cpp  HandClassifier.h  HandDemo.cpp  HandDetector.cpp  HandFeatureExtractor.cpp  HandFeatureExtractor.h  HandSlamDemo.cpp  HumanBody.cpp  HumanDetector.cpp  LICENSE.md  LightVis - Shortcut.lnk  MockCamera.cpp  (+58 more)
OpenARK-SDK/: CMakeFindPackage.tx  CMakeLists.tx  CMakeLists.txt  CMakeSourceGroup.tx  OpenARK-SDK.vcxproj  OpenARK-SDK.vcxproj.filters  README.md  fingertips_openark.txt  vcxproj2cmake.pl
OpenARK-SDK/x64/Debug/: vc140.idb
OpenARK-SDK/x64/Debug/OpenARK-SDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenARK-SDK.lastbuildstate
OpenARK-SDK/x64/Release/OpenARK-SDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenARK-SDK.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenARK-test/: test.cpp.cpp
Release/svm/: 0.svmmodel  1.svmmodel  2.svmmodel  3.svmmodel
cache/: AzureKinectCamera.cpp  AzureKinectCamera.h
cached/: AzureKinectCamera.h  Detector.h  PMDCamera.h  RS2Camera.h  SR300Camera.h
cmake_modules/: FindCXSparse.cmake  FindCeres.cmake  FindGlog.cmake  FindOpenGV.cmake  FindPMDSDK.cmake  FindRSSDK.cmake  FindRSSDK2.cmake
config/: d435i_intr.yaml
config/hand-svm/: svm.xml
cvar_folders/: openark_F1.txt  openark_F3.txt  openark_F4.txt
data/avatar-dataset/: README.md  download.sh
data/avatar-model/: README.md  extract.py  pose_prior.txt
dependencies_installer/: README.md
dependencies_installer/arkdeps/: CMakeLists.txt
dependencies_installer/arkdeps/IIS Express/: REDIST.TXT  UpgradeApplicationHost.js  WCF35Setup.js  browscap.ini  iisexpress.exe.manifest  iisexpressshim.sdb  iisexpresstray.exe.config  license.rtf
dependencies_installer/arkdeps/opencv343-contrib/: OpenCVConfig-version.cmake  OpenCVConfig.cmake
dependencies_installer/creation/: file_list.nsh  gen_list_files_for_nsis.py  install_list.nsh  license.txt  main_log.nsi  uninstall_list.nsh
dependencies_installer/creation/old_main_nsi/: main.nsi
documentation/: Jetson-NX-build-instructions.md  Linux-build-instructions.md  OpenARK CMAKE build instructions for Windows.docx  Ubuntu-18-build-instructions.md  Windows-build-instructions-quick.md  Windows-build-instructions.docx  doxygen.config  k4a_dependency.md  windows-buid-inst.md  windows-build-inst.md
include/: Avatar.h  AzureKinectCamera.h  Calibration.h  CameraSetup.h  Converter.h  CorrespondenceRansac.h  D435Camera.h  D435iCalibWriter.h  D435iCamera.h  DepthCamera.h  DetectionParams.h  FocusImageUtil.h  FrameObject.h  FramePlane.h  Hand.h  HandClassifier.h  HandDetector.h  HumanBody.h  HumanDetector.h  MockCamera.h  MockD435iCamera.h  NetworkLib.h  NetworkStereoCamera.h  OkvisSLAMSystem.h  PMDCamera.h  PlaneDetector.h  PointCostSolver.h  PoseGraphSolver.h  ProtobufHand.pb.h  ProtobufImage.pb.h  ProtobufUtil.h  RGBCamera.h  RS2Camera.h  SLAMSystem.h  SR300Camera.h  SaveFrame.h  SegmentedMesh.h  SingleConsumerPriorityQueue.h  SparseMap.h  StereoCamera.h  (+11 more)
include/camera/: AzureKinectCamera.h  CameraSetup.h  D435Camera.h  D435iCalibWriter.h  D435iCamera.h  DepthCamera.h  MockCamera.h  MockD435iCamera.h  PMDCamera.h  RGBCamera.h  RS2Camera.h  SR300Camera.h  StereoCamera.h  Webcam.h
include/camera/camera_util/: Calibration.h
include/camera/webcam/: Webcam.h
include/hand_and_avatar/: Detector.h  FramePlane.h  PlaneDetector.h  StreamingAverager.h
include/hand_and_avatar/avatar/: Avatar.h  HumanBody.h  HumanDetector.h
include/networklib/: Client.h  Constants.h  Factory.h  IClient.h  IServer.h  LockedQueue.h  Log.h  Server.h  Statistics.h  Util.h
include/slam/: CorrespondenceRansac.h  OkvisSLAMSystem.h  PointCostSolver.h  PoseGraphSolver.h  SLAMSystem.h  SingleConsumerPriorityQueue.h  SparseMap.h
include/util/: Core.h  FrameObject.h  SaveFrame.h  SegmentedMesh.h  Types.h  Visualizer.h  concurrency.h  glfwManager.h
libSVM/: svm.cpp  svm.h
samplecode/: ARTiltBrushDemo.cpp  CreatingDebugData.cpp  HandAndPlane.cpp  HandDetectionSingle.cpp  HandTracking.cpp  HandandPlane.cpp  LoadingDebugData.cpp  SensorIO.cpp  UKFAttitude.cpp
samplecode/calib/: calib.py
samplecode/vive-focus-unity/: .gitignore  README.md  packages.config  vive-focus-unity.sln
scripts/: OfflineReconstruction.py
src/: Avatar.cpp  CorrespondenceRansac.cpp  DepthCamera.cpp  HandClassifier.cpp  HumanDetector.cpp  OkvisSLAMSystem.cpp  PMDCamera.cpp  PlaneDetector.cpp  PointCostSolver.cpp  PoseGraphSolver.cpp  RGBCamera.cpp  SLAMSystem.cpp  SaveFrame.cpp  SegmentedMesh.cpp  SingleConsumerPriorityQueue.cpp  SparseMap.cpp  StereoCamera.cpp  Types.cpp  Version.h.in  Visualizer.cpp  Webcam.cpp  concurrency.cpp  glfwManager.cpp
src/3drecon/: 3DReconDemo.cpp  SaveFrame.cpp
src/camera/: AzureKinectCamera.cpp  D435Camera.cpp  D435iCalibWriter.cpp  D435iCamera.cpp  DepthCamera.cpp  MockCamera.cpp  MockD435iCamera.cpp  PMDCamera.cpp  RGBCamera.cpp  RS2Camera.cpp  SR300Camera.cpp  StereoCamera.cpp  Webcam.cpp
src/hand_and_avatar/: DataRecording.cpp  Detector.cpp  FramePlane.cpp  PlaneDetector.cpp  StreamingAverager.cpp
src/slam/: OkvisSLAMSystem.cpp  SlamDemo435i.cpp  SlamRecording.cpp  SlamReplaying.cpp
src/slam_camera/: AzureKinectCamera.cpp
src/util/: FrameObject.cpp  SegmentedMesh.cpp  Util.cpp  Visualizer.cpp  glfwManager.cpp
svm/: 0.svmmodel  1.svmmodel  2.svmmodel  3.svmmodel  4.svmmodel  svm.xml  svm_0.xml  svm_1.xml  svm_2.xml  svm_3.xml
unity/: README.md
unity/managed/: OpenARK.cs
unity/native/: UnityInterface.cpp  UnityInterface.h
unity/samplecode/: Controller.cs
x64/Release/: OpenARK-SDK.ipdb  RT_Transform.txt
(+389 files in other folders)
